@@ -72,6 +72,7 @@ Verilator 5.043 devel
 * Fix `--prof-exec` using `--lib-create`. [Geza Lore]
 * Fix fork scheduling semantics (#6730). [Artur Bieniek, Antmicro Ltd.]
 * Fix internal fault when cross-class calling with DPI (#6735) (#6742). [Matthew Ballance]
+* Fix class-in-class extends with parameters (#6773).
 
 
 Verilator 5.042 2025-11-02
